feat: 지역별 전월세 통계 API 구현
- 전세(월세=0)와 월세(월세>0)를 CASE 문으로 분리해 단일 쿼리로 집계
- 인터페이스 프로젝션으로 집계 결과 매핑
- 추천 점수 산출을 위한 주거비 지표의 기초 데이터로 활용 예정

검증: 잠실동 전세 평균 10.4억 / 다산동 5.2억으로 실제 시세와 일치
성능: 응답 시간 12~16ms (FK 인덱스 활용, 별도 최적화 불필요)